Changes for 2018.3
===============================

sysmonpsu_v2_5:
Fixed Cppcheck warnings
Modified code for MISRA-C:2012 Compliance.

sysmon_v7_5:
Added Example for Vaux external channels

axidma_v9_8:
Fix cppcheck, gcc and doxygen warnings.

can_v3_3:
Fix cppcheck and GCC warnings.

emacps_v3_8:
Fix cppcheck, GCC and doxygen warnings.
Remove duplicate code in xemacps_bd.h

gpiops_v3_4:
Resolved cppcheck warnings.(CR#1006331)
Resolved MISRA-C mandatory violations.(CR#1007751)

sdps_v3_6
Fixed Cppcheck, Doxygen and gcc warnings (CR#1006375)
Add initializer macro for HasEMIO
Add support for using 64Bit DMA in 32Bit Processor
Add cache invalidation call before returning from ReadPolled API
Resolve compilation warnings for ARMCC toolchain

xilffs_v4_0:
Upgraded the FatFS version to 0.13b
Fix Cppcheck and Doxygen warnings
Modify sector buffer alignment to that of cache line supported
SD Example - Change file size to 8MB from 8KB for ZynqMP platform
Modify tcl file to create FILE_SYSTEM_INTERFACE_SD in xparameters.h only once
if there are multiple instances of SD
Add Word Access support in latest FatFS source
Update the bug fixes on 0.13b FatFS

clockps_v1_0:
First release of clocksPS drivers.
Fix Doxygen and coverity reported issues.

lwip202_v1_2:
Add mcdma support and handle IEEE_1588 for AXI Phy in ethernet header.
Add AXI 2.5G Ethernet support.
Fix axiethernet apps build error by removing dependency on HSI get_connected_intr_cntrl API output.
Fix copyrights.
In tcl update get_cells API argument to support hierarchical designs.

lwip_echo_server:
Fix warning in iic phy reset in lwip echo server.
Fixed gcc compilation warning for zynqmp platform.(CR#1011020)

mcdma_v1_2:
Add API XMcdma_LookupConfigBaseAddr() to lookup config by base address.
Add XMcdma_BdSetSwId() and XMcdma_BdGetSwId() macro to access SW ID field in BD.
Export XMcdma_BdChainFree() and XMcDma_BdSetAppWord() APIS to use from LwIP contrib source.
Read num channels from IP configuration.