@@ -17,6 +17,7 @@ Fix cppcheck and GCC warnings.
 emacps_v3_8:
 Fix cppcheck, GCC and doxygen warnings.
 Remove duplicate code in xemacps_bd.h
+Fixed PTP interrupt masks and cleaned up comments.
 
 gpiops_v3_4:
 Resolved cppcheck warnings.(CR#1006331)
